@@ -1,3 +1,7 @@
+2008-10-28 Ingo Renner  <ingo@typo3.org>
+
+	* added a check for existing friendship requests to the profile actions widget
+
 2008-10-24 Ingo Renner  <ingo@typo3.org>
 
 	* cleanup of the localization manager class
